# steamdeck-decky-syncthing

./: .gitignore  LICENSE  README.md  TODO  main.py  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js
backend/: Dockerfile  entrypoint.sh
backend/decky-syncthing-watchdog/: Cargo.toml
backend/decky-syncthing-watchdog/examples/: systemd_client.rs
backend/decky-syncthing-watchdog/src/: api.rs  checks.rs  lib.rs  main.rs  panic_util.rs  process_watchdog.rs  proxy.rs  service.rs  settings.rs  state.rs  util.rs  watch_gamescope.rs
src/: Settings.tsx  State.ts  byteUnit.ts  consts.ts  formatDate.ts  index.tsx  style.css  types.d.ts  util.ts
src/api/: SyncthingApi.ts  SyncthingReactHooks.tsx  WatchdogApi.ts
src/components/: Context.tsx  DeviceStatusIcon.tsx  DevicesPanel.tsx  DialogContent.tsx  FolderPanel.tsx  FolderStatusIcon.tsx  Identicon.tsx  Loader.tsx  PanelErrorContent.tsx  QuickAccess.tsx  Scrollable.tsx  Setting.tsx  SettingDropdown.tsx  SyncthingEntity.tsx  SyncthingIcon.tsx  SyncthingState.tsx  WelcomePanel.tsx  WithSuspense.tsx
src/components/detail/: DetailModal.tsx  DeviceDetailsModal.tsx  FolderDetailsModal.tsx  FolderFileStats.tsx  ThisDeviceDetailsModal.tsx
src/components/detail/device/: DeviceAutoAcceptRow.tsx  DeviceDownloadRateRow.tsx  DeviceFoldersRow.tsx  DeviceIdentificationRow.tsx  DeviceIntroducedByRow.tsx  DeviceIntroducerRow.tsx  DeviceLastSeenRow.tsx  DeviceOutOfSyncItemsRow.tsx  DeviceStatusRow.tsx  DeviceSyncStatusRow.tsx  DeviceUntrustedRow.tsx  DeviceUploadRateRow.tsx  DeviceVersionRow.tsx
src/components/detail/folder/: FolderErrorRow.tsx  FolderFailedItemsRow.tsx  FolderFilePullOrderRow.tsx  FolderGlobalStateRow.tsx  FolderIdRow.tsx  FolderIgnorePermissionsRow.tsx  FolderLastScanRow.tsx  FolderLatestChangeRow.tsx  FolderLocalStateRow.tsx  FolderLocallyChangedItemsRow.tsx  FolderOutOfSyncItemsRow.tsx  FolderPathRow.tsx  FolderRescansPeriodicRow.tsx  FolderRescansWatcherRow.tsx  FolderSharedWithRow.tsx  FolderStatusRow.tsx  FolderTypeRow.tsx  FolderVersioningRow.tsx
src/components/detail/this_device/: SelfDownloadRateRow.tsx  SelfListenersRow.tsx  SelfLocalStateRow.tsx  SelfUploadRateRow.tsx  SelfUptimeRow.tsx  SelfVersionRow.tsx
src/components/settings/: SettingsRouter.tsx
src/components/settings/pages/: DebugPage.tsx  (+3 more)
src/components/setup/: SetupRouter.tsx
src/components/wizard/: Wizard.tsx  WizardSidebarItem.tsx
(+10 files in other folders)
